[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-gaca-mcp"
version = "0.3.0"
description = "SEO GACA MCP — GEO · Audit · Crawl · Analyze — 37 tools for technical SEO, performance, GEO (AI search optimization), accessibility, security, UX, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bartosz Gaca", email = "contact@bartoszgaca.pl" }
]
keywords = ["seo", "mcp", "geo", "audit", "ai", "claude", "llm", "generative-engine-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "respx>=0.20",
]

[project.scripts]
seo-gaca-mcp = "gaca.__main__:main"
gaca = "gaca.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gaca"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
